--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <form action="/checkout" method="post">
+      <p>
+        <input type="text" name="item" id="item">
+      </p>
+    </form>
+  </body>
+</html>
