--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
       <p>
         <input type="text" name="item" id="item">
       </p>
-      <input="submit" value = "submit">
+      <input="submit" id="submit" value="submit">
     </form>
   </body>
 </html>
